fix(hero): adjust min-height and margin-top for improved layout on mobile

--- a/src/pages/home/ui/hero-animated.module.scss
+++ b/src/pages/home/ui/hero-animated.module.scss
@@ -1,7 +1,7 @@
 .heroSection {
   position: relative;
-  min-height: 100vh;
-  min-height: 100dvh;
+  min-height: calc(100vh + 48px);
+  min-height: calc(100dvh + 48px);
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -56,7 +56,7 @@
   }
 
     @media (max-width: 768px) {
-    margin-top: calc(48px * 2);
+    margin-top: calc(48px * 3);
   }
 }
 
